tests/snapshots/run_wpt_conformance__coreml_softmax_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softmax.https.any.js",
    "softmax float16 4D tensor",
    "coreml",
    "PASS",
)
