tests/snapshots/run_wpt_conformance__coreml_softmax_float32_2D_constant_tensor_all_positive.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softmax.https.any.js",
    "softmax float32 2D constant tensor all positive",
    "coreml",
    "PASS",
)
