tests/snapshots/run_wpt_conformance__coreml_softmax_float32_3D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softmax.https.any.js",
    "softmax float32 3D constant tensor",
    "coreml",
    "PASS",
)
